add textures and build lighting

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=4FCEA9B04996296E96F3B4AC689E57B1
+CopyrightNotice=Joshua Pearson 2021 UE4
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
