--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/StarterContent/Maps/Building_Escape.Building_Escape
 
 
 EditorStartupMap=/Game/StarterContent/Maps/Building_Escape.Building_Escape
+GlobalDefaultGameMode=/Game/Blueprints/BuildingEscapeGameMode_BP.BuildingEscapeGameMode_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
